--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/StephenHanzlik/q2pi#readme",
   "dependencies": {
+    "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
+    "boom": "^4.2.0",
     "express": "^4.14.0",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
