prepare heroku deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "knex migrate:latest",
+  "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,9 @@
     "express": "^4.14.0",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
-    "pg": "^6.1.0"
+    "pg": "^6.1.0",
+    "engines": {
+    "node": "v7.2.0"
+   }
   }
 }
