--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.15.2",
     "boom": "^4.2.0",
     "express": "^4.14.0",
+    "formidable": "^1.0.17",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
     "pg": "^6.1.0"
