--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     },
     "express": "^4.14.0",
     "formidable": "^1.0.17",
+    "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
-    "pg": "^6.1.0"
+    "pg": "^6.1.0",
+    "toastr": "^2.1.2"
   }
 }
