--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "knex migrate:latest",
     "knex": "knex",
-    "start": "nodemon app.js /dev/ttyACM0"
+    "start": "nodemon app.js /dev/ttyACM0 && sudo service start minidlna enable && sudo service minidlna start"
   },
   "repository": {
     "type": "git",
