--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "formidable": "^1.0.17",
     "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
+    "longjohn": "^0.2.11",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "serialport": "^4.0.7"
