--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "longjohn": "^0.2.11",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
+    "s3fs": "git+https://github.com/RiptideElements/s3fs.git",
     "serialport": "^4.0.7"
   }
 }
