--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
     "boom": "^4.2.0",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "engines": {
       "node": "v7.2.0"
