--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "boom": "^4.2.0",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^2.0.0",
     "engines": {
       "node": "v7.2.0"
     },
